# Vegetable-Disease-prediction

./: README.md  app.py  create_realistic_samples.py  create_sample_images.py  create_simple_realistic_samples.py  disease_info.py  download_real_images.py  model.py  plant_disease_model.pkl  pyproject.toml  utils.py
